# pytest-ptera

./: README.md  pyproject.toml
pytest_ptera/: main.py
